--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,10 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6168912298:AAGpmCFYgyEMDrSMk4RwUWmKbtyLGdLPRN8"                              # Require restart after changing it while bot running
+OWNER_ID = "2049857696"                               # Require restart after changing it while bot running
+TELEGRAM_API = "20937540"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "bf35fcc80dcea68066ec08b588cde18d"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
 IS_TEAM_DRIVE = ""
